API bulk action: host_config bulk delete
